--- a/_posts/2019-12-19-the-us-narrative-today.html
+++ b/_posts/2019-12-19-the-us-narrative-today.html
@@ -945,107 +945,107 @@ stories:
   domain: http://www.moorenews.com/
   link: https://www.moorenews.com/sports/national/marcus-fleming-ronald-delancy/image_2b50cb96-6f57-5aeb-86a9-30772cebd475.html
 images:
-- name: razorwire-DSC-0080-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-atari-missle.jpg
-- name: old-barn-old-barn-1500-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-really-hot.jpg
-- name: crow_atari_missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_atari_missle.jpg
-- name: dc-statue-dcstatue-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-satan-red.jpg
-- name: la-muse-grain-ship-docking-grass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-grain-ship-docking-grass.jpg
-- name: gypsy-wagon-gypsywagon-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-kand-two.jpg
-- name: border-crossing-bordercrossing-colorful-dream.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-colorful-dream.png
-- name: rockingchair-rockingchair-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gan-vogh.jpg
-- name: stalin-time-old-church_36588495271_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-church_36588495271_o.jpg
-- name: white-house-whitehouse-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-emily-carr.jpg
-- name: mosaic-face-mosaic-face-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-gred-mash.jpg
-- name: castle-wall-DSC-0067-purp-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purp-paper.JPG
-- name: abe-lincoln-one-ww2-color-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-07-91.jpg
-- name: windowmountain-window-mountain-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-post-modern.jpg
-- name: miamibeach-miamibeach-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-brush.jpg
-- name: oldhouse-oldhouse-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-graham-sutherland.jpg
-- name: aws-s3-square-statue-face-open-mouth-copper-circuit-square.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-statue-face-open-mouth-copper-circuit-square.png
-- name: oldcabin-store-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-hot-spicy.jpg
-- name: rockingchair-face-2-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-crafty-painting.jpg
-- name: amusement-park-amusement-park-2-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-free-woman.jpg
-- name: gypsymosaic-gypsy-eyes-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-matrix.jpg
-- name: capital-battle-capitolbattle-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-cinnamon-rolls.jpg
-- name: mistywoods-babyfoot-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-diego-rivera1.jpg
-- name: eduardo-eduardo-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-crunch-paper.jpg
-- name: capital-battle-capitolbattle-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-smoking-cigarette.jpg
-- name: border-crossing-bordercrossing-kand-two.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-kand-two.png
-- name: old-school-house-old-schoolhouse-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-constitution.jpg
-- name: beach-rocks-beach-rocks-currents-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-green-zuma.jpg
-- name: machine-road-machine-road-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purple-storm.jpg
-- name: razorcliff-razorcliff-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-granite.jpg
-- name: aws-s3-stories-oldgaspumps-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-oldgaspumps-umberto-bocc.jpg
-- name: oldbarn-oldbarn-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-kand-two.jpg
-- name: nazi-invasion-castle-window_35928999923_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-castle-window_35928999923_o.jpg
-- name: old-granary-field-granaryfield-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-rainbow-festival.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-blue-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-circuit.JPG
+- name: rain-princess-IMG_6945.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6945.jpg
+- name: rain-princess-city-skyline-bright.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-city-skyline-bright.jpg
+- name: old-school-house-old-schoolhouse-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-green-zuma.jpg
+- name: oldcabin-store-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dark-dali.jpg
+- name: adam-smith-adam-smith-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-circuit-3.jpg
+- name: abandonedbuildings_yellow_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_yellow_paper.jpg
+- name: sand-hand-sand-hand-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-crunch-paper.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-horiz-circuit.jpg
+- name: catacombs-catacombs-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-china-prop.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
+- name: locked-up-steam-lock-up-steam-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-colored-circuits.jpg
+- name: la-muse-building-shadows-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-building-shadows-sun.jpg
+- name: flower-barbed-wire-flower-barbed-wire-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-granite.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-graham-sutherland.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-graham-sutherland.png
+- name: dragon-desert-desert-dragon-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-rain.jpg
+- name: border-fence-border-fence-on-hill-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-green-zuma.jpg
+- name: old-house-oldhouse-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-monet-one.jpg
 - name: oldhouse-granaryfield.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield.jpg
-- name: old-barn-old-barn-1500-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-alberto-giacometti.jpg
-- name: fence-fence-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-sunday.jpg
-- name: old-granary-field-granaryfield-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dry-skin.jpg
-- name: aws-s3-stories-new-32-119-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-32-119-800-500-0-max-0--1--1.jpg
-- name: windowmountain-window-mountain-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-plentiful.jpg
-- name: oldroad-old-road-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-umberto-bocc.jpg
-- name: curtain-curtain-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-umberto-bocc.jpg
-- name: death-valley-death-valley-national-park-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-kandinsky-bv.jpg
-- name: oldbarn-oldbarn-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-monet-one.jpg
-- name: copper-circuit-statue-of-liberty_36744433525_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-of-liberty_36744433525_o.jpg
-- name: christianity-christianity-under-construction-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-yellow-collage.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-mucha-mult.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alien-goggles.jpg
-- name: old-barn-old-barn-1500-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crunch-paper.jpg
-- name: meadowbutterfly-meadow-butterfly-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-space-pizza.jpg
+- name: san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
+- name: crow_hot_spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_hot_spicy.jpg
+- name: oldhousecars-house-old-cars-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-cinnamon-rolls.jpg
+- name: amusement-park-amusement-park-2-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-purple-pond.jpg
+- name: aws-s3-stories-containership-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-blue-circuit.jpg
+- name: sand-hand-sand-hand-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit-3.jpg
+- name: carry-load-carryload-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-color.jpg
+- name: powerlines-power-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crafty-painting.jpg
+- name: fence-fence-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-alien-goggles.jpg
+- name: gypsy-wagon-gypsywagon-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-crafty-painting.jpg
+- name: hollywood-building-hollywood-building-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purp-paper.jpg
+- name: crow_blue_granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_blue_granite.jpg
+- name: store-on-corner-store-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-gred-mash.jpg
+- name: old-granary-field-oldhouse-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-yellow-collage.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-electricity.jpg
+- name: bf-skinner-old-piano-paris-hospital.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-piano-paris-hospital.jpg
+- name: bf-skinner-cruise-ship-shore-log.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-cruise-ship-shore-log.jpg
+- name: statue-of-liberty-front-view-statueofliberty-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-colorful-dream.jpg
+- name: old-granary-field-oldhouse-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-internet-numbers.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-yellow-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-yellow-paper.JPG
+- name: sand-hand-sand-hand-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-smoking-cigarette.jpg
+- name: old-church-oldchurch-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-creativity.jpg
+- name: school-clouds-church-clouds-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-graham-sutherland.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-copper-circuit-2.jpg
+- name: stories-adam-smith-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-adam-smith-feed-people.jpg
+- name: stories-new-machine-road-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-machine-road-blue-circuit-4.jpg
+- name: downtown-fredericksburg-clean-view.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-clean-view.JPG
+- name: downtown-los-angeles-downtown-la-neo-instinct.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-neo-instinct.JPG
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-brush.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-brush.png
+- name: mistywoods-babyfoot-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-creativity.jpg
+- name: supreme-court-supremecourt-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-sunday.jpg
+- name: paris-paris-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-kandinsky-bv.jpg
+- name: power-lines-power-lines-empty-space-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-yellow-paper.jpg
 ---
 One More Time For Eagles.&nbsp;Authorities Charge Man Involved In Armed Robbery Near Bemidji.&nbsp;Virginia Delegates Resume Fight For Student Journalist Protections And Shield Laws.&nbsp;Articles Of Impeachment For Abuse Of Power, Obstruction Of Congress Approved.&nbsp;Water Temperature Makes For Perfect Fishing Conditions.&nbsp;Snyder School Board Casts Appraisal District Board Votes.&nbsp;Robots To Walk Naturally.&nbsp;Former Tulsa Tribune Building Is On National Register.&nbsp;
